Fix container answer on mobile

--- a/src/scss/FlipCards.scss
+++ b/src/scss/FlipCards.scss
@@ -114,6 +114,7 @@ $desktop-width: 1024px;
 
   .theCard {
     height: 80%;
+    margin-top: 5rem;
   }
 }
 
